--- a/application-service/src/Dockerfile
+++ b/application-service/src/Dockerfile
@@ -1,10 +1,18 @@
 FROM node:18-alpine
 
 WORKDIR /app
+
+# Copy source code first
 COPY . .
 
-# If the service has no package.json, skip npm install
-RUN if [ -f package.json ]; then npm install; fi
+# Initialize Node project if package.json does not exist
+RUN if [ ! -f package.json ]; then \
+      npm init -y; \
+    fi
+
+# Install dependencies only if package.json exists
+RUN npm install --omit=dev || true
 
 EXPOSE 3001
+
 CMD ["node", "src/index.js"]
