--- a/patient-service/src/Dockerfile
+++ b/patient-service/src/Dockerfile
@@ -1,19 +1,38 @@
-FROM node:18-alpine
+# -----------------------------
+# Stage 1: Dependency Install
+# -----------------------------
+FROM node:18-alpine AS deps
 
-# Create app directory
 WORKDIR /app
 
-# Copy only dependency manifests first (better cache utilization)
-COPY package*.json ./
+# Copy dependency manifests
+COPY package.json package-lock.json ./
 
-# Install only production dependencies
-RUN npm install --omit=dev
+# Fail fast if package.json is missing
+RUN test -f package.json
 
-# Copy application source code
-COPY . .
+# Install production dependencies
+RUN npm ci --omit=dev
 
-# Expose patient service port
+
+# -----------------------------
+# Stage 2: Runtime
+# -----------------------------
+FROM node:18-alpine
+
+WORKDIR /app
+
+# Copy node_modules from deps stage
+COPY --from=deps /app/node_modules ./node_modules
+
+# Copy application source
+COPY src ./src
+COPY package.json ./
+
+# Security: non-root user
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
+
 EXPOSE 3000
 
-# Start the service
 CMD ["node", "src/index.js"]
