--- a/application-service/src/Dockerfile
+++ b/application-service/src/Dockerfile
@@ -1,18 +1,26 @@
+# ---------- Stage 1: Build ----------
+FROM node:18-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+
+# installs deps (needs package-lock.json)
+RUN npm ci --omit=dev
+
+COPY src ./src
+
+
+# ---------- Stage 2: Runtime ----------
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy source code first
-COPY . .
+# copy only what's required to run
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/src ./src
 
-# Initialize Node project if package.json does not exist
-RUN if [ ! -f package.json ]; then \
-      npm init -y; \
-    fi
-
-# Install dependencies only if package.json exists
-RUN npm install --omit=dev || true
-
-EXPOSE 3001
+ENV NODE_ENV=production
+EXPOSE 3000
 
 CMD ["node", "src/index.js"]
